# fsol

./: Cargo.toml
src/: main.rs
